--- a/GXTExamples/.classpath
+++ b/GXTExamples/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-email-1.2.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io-2.4.jar"/>
@@ -11,11 +10,6 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/GLBase_source.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-17.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-gwt-17.0.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-servlet.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-servlet-deps.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gxt-3.0.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gxt-chart-3.0.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gxt-legacy-3.0.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/javax.persistence-2.0.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/joda-time-2.3.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/log4j-1.2.13.jar"/>
@@ -28,5 +22,10 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/uibinder-bridge-2.4.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/validation-api-1.0.0.GA.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/xmlbeans-2.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aking/workspace/GXTExamples/war/WEB-INF/lib/gxt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aking/workspace/GXTExamples/war/WEB-INF/lib/gxt-chart.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aking/workspace/GXTExamples/war/WEB-INF/lib/gxt-legacy.jar"/>
+	<classpathentry kind="lib" path="C:/Users/aking/workspace/GXTExamples/war/WEB-INF/lib/gxt-theme-neptune.jar"/>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
