--- a/GXTExamples/.classpath
+++ b/GXTExamples/.classpath
@@ -2,27 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-email-1.2.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-lang3-3.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-logging-1.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/GLBase_source.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-17.0.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-gwt-17.0.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gxt-chart.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gxt.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gxt-legacy.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gxt-theme-neptune.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/javax.persistence-2.0.0.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/joda-time-2.3.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/log4j-1.2.13.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/mysql-connector-java-5.1.6-bin.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/poi-3.9-20121203.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/poi-ooxml-3.9-20121203.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/poi-ooxml-schemas-3.9-20121203.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/stax-api-1.0.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/xmlbeans-2.3.0.jar"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/GXTExamples"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
