--- a/GXTExamples/war/cfg/include/DataSources.cfg
+++ b/GXTExamples/war/cfg/include/DataSources.cfg
@@ -3,6 +3,7 @@
     Active='Y'
     InitialConnections='5'
     MaxConnections='15'
+    Name='FosterAPet'
     Password='andy'
     ServerAddress='localhost'
     Type='MySQL'
